--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.1",
+    "@react-navigation/stack": "^6.3.9",
     "expo": "~47.0.8",
     "expo-status-bar": "~1.4.2",
+    "firebase": "^9.15.0",
     "react": "18.1.0",
-    "react-native": "0.70.5"
+    "react-native": "0.70.5",
+    "react-native-screens": "~3.18.0",
+    "react-native-gesture-handler": "~2.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
